Atualização de pacote

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -230,14 +230,14 @@
                                     <li>
                                         <a href="/admin/pessoa/consulta-funcionario" title="Consultar Funcionário" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Consultar</span>
+                                            <span class="sidebar-text">Consulta</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/pessoa/cadastro-funcionario" title="Cadastrar Funcionário" class="corner-all">
                                             <i class="icofont-book"></i>
-                                            <span class="sidebar-text">Cadastrar</span>
+                                            <span class="sidebar-text">Cadastro</span>
                                         </a>
                                     </li>
                                     
@@ -257,14 +257,14 @@
                                     <li>
                                         <a href="/admin/pessoa/consulta-paciente" title="Consultar Paciente" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Consultar</span>
+                                            <span class="sidebar-text">Consulta</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/pessoa/cadastro-paciente" title="Cadastrar Paciente" class="corner-all">
                                             <i class="icofont-book"></i>
-                                            <span class="sidebar-text">Cadastrar</span>
+                                            <span class="sidebar-text">Cadastro</span>
                                         </a>
                                     </li>
                                     
@@ -284,14 +284,14 @@
                                     <li>
                                         <a href="/admin/unidade/consulta-unidade" title=" Consultar Unidades de Saúde" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Consultar</span>
+                                            <span class="sidebar-text">Consulta</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/unidade/cadastro-unidade" title="Cadastrar Unidade de Saúde" class="corner-all">
                                             <i class="icofont-book"></i>
-                                            <span class="sidebar-text">Cadastrar</span>
+                                            <span class="sidebar-text">Cadastro</span>
                                         </a>
                                     </li>
                                     
@@ -310,14 +310,14 @@
                                     <li>
                                         <a href="/admin/vacina/consulta-vacina" title="Consultar Vacinas" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Consultar</span>
+                                            <span class="sidebar-text">Consulta</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/vacina/cadastro-vacina" title="Cadastrar Vacinas" class="corner-all">
                                             <i class="icofont-book"></i>
-                                            <span class="sidebar-text">Cadastrar</span>
+                                            <span class="sidebar-text">Cadastro</span>
                                         </a>
                                     </li>
                                     
@@ -336,14 +336,14 @@
                                     <li>
                                         <a href="/admin/cartao/consulta-cartao" title="Consultar Cartão de Vacinas" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Consultar</span>
+                                            <span class="sidebar-text">Consulta</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/cartao/cadastro-cartao" title="Cadastrar Cartão de Vacinas" class="corner-all">
                                             <i class="icofont-book"></i>
-                                            <span class="sidebar-text">Cadastrar</span>
+                                            <span class="sidebar-text">Registro de Vacinas</span>
                                         </a>
                                     </li>
                                     
@@ -362,14 +362,14 @@
                                     <li>
                                         <a href="/admin/campanha/consulta-campanha" title="Consultar Campanhas" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Consultar</span>
+                                            <span class="sidebar-text">Consulta</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/campanha/cadastro-campanha" title="Cadastrar Campanhas" class="corner-all">
                                             <i class="icofont-book"></i>
-                                            <span class="sidebar-text">Cadastrar</span>
+                                            <span class="sidebar-text">Cadastro</span>
                                         </a>
                                     </li>
                                     
@@ -388,7 +388,7 @@
                                     <li>
                                         <a href="form.html" title="form element" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Enviar</span>
+                                            <span class="sidebar-text">Envio de Mensagens</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
@@ -406,7 +406,7 @@
                                     <div class="helper-font-24">
                                         
                                     </div>
-                                    <span class="sidebar-text">Emitir Relatórios</span>
+                                    <span class="sidebar-text">Emissão Relatórios</span>
                                 </a>
                             </li>
                             
