--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -12,7 +12,7 @@
         </select>
         <div class="input-append">
             <input class="input-large" name="search" id="appendedInputButton" type="text">
-            <button type="submit" class="btn btn-info"><i class="icon-search icon-white"></i>&nbsp;Pesquisar</button>
+            <button type="submit" class="btn btn-info"><i class="icon-search icon-white"></i>Pesquisar</button>
         </div>
     </form>
 
