--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -1,45 +1,207 @@
-<style type="text/css">
+<script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<fieldset>
+    <legend>Registro e Aprazemento de vacinas</legend>
+    <?php
+    if ($this->mensagem):
+        ?>
+        <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
+        <?php
+    endif;
+    ?>
 
-    h1#aa{
-        background-color: #ffcc99;
-        text-align: center;
-        font-size: 20pt;
-        width: 550pt;
-        margin: 10px 0 30px 5px;
+    <div style="margin-bottom: 18px;" class="tabbable">
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#tab1">Dados do Paciente</a></li>
+            <li class=""><a data-toggle="tab" href="#tab2">Registrar Vacinas</a></li>
+            <li class=""><a data-toggle="tab" href="#tab3">Aprazar Vacinas</a></li>
 
-    }
-    li a:hover{
-        color: #CB0101;
+        </ul>
+        <form class="form-horizontal" method="post">
+            <div class="tab-content">
+                <div id="tab1" class="tab-pane active">
 
-    }
-    li a:active{
-        border-style: none;
-    }
+                    <!--INICIO DO PRIMEIRO MENU-->
+                    <p class="text-left">
+                    Codigo do Paciente:<strong> 12</strong><br> 
+                    Nome do Paciente: <strong>José da Silva</strong><br> 
+                    Nome da mãe:<strong> Maria da Silva</strong><br> 
+                    Data de Nascimento:<strong> 06/10/1989</strong><br>
+                    Sexo: <strong>Masculino</strong><br>
+                    Telefone celular:<strong> (61) 9152-8547</strong><br> 
+                    email:<strong> jose_silva@gmail.com</strong>
+                    </p>
 
-    .tabbable{
-        height: auto;
-    }
+                    <div class="rows-fluid">
+                        <div class="span12">
+                            <div class="form-actions">
+                                <div class="control-group">
+                                    <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-    div #content{
-        width: 745px;
-        height:700px;
-        margin: 0 0 0 355px;
-        padding: 40px;
-        background: #fff;
-    }
+                </div> <!--FIM DO PRIMEIRO MENU-->
+                
+                <div id="tab2" class="tab-pane">
+
+                    <!--INICIO DO SEGUNDO MENU-->
+                    <div class="rows-fluid">
+                        <div class="span6"> 
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Data da Aplicação:</label>
+                                <div class="controls">
+                                    <input type="text" placeholder="Text input">&nbsp;DD/MM/AAAA
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Número da Dose:</label>
+                                <div class="controls">
+                                    <select>
+                                        <option>Selecione a opção</option>
+                                        <option>1º dose</option>
+                                        <option>2º dose</option>
+                                        <option>3º dose</option>
+                                        <option>Dose de reforço</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                                <div class="controls">
+                                    <select>
+                                        <option>Selecione a opção</option>
+                                        <option>Unidade de Saúde 1</option>
+                                        <option>Unidade de Saúde 2</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="span6">
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Nome da Vacina:</label>
+                                <div class="controls">
+                                    <select>
+                                        <option>Selecione a opção</option>
+                                        <option>BCG - ID</option>
+                                        <option>Hepatite B</option>
+                                        <option>Vacina Oral de Rotavírus Humano (VROH)</option>
+                                        <option>Vacina oral poliomielite (VOP)</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Lote da Vacina:</label>
+                                <div class="controls">
+                                    <input type="text" placeholder="Text input">
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Nome do Responsável:</label>
+                                <div class="controls">
+                                    <input type="text" placeholder="Text input">
+                                </div>
+                            </div>
 
 
 
-</style>
+                        </div>
+                    </div>
+
+                    <div class="rows-fluid">
+                        <div class="span12">
+                            <div class="form-actions">
+                                <div class="control-group">
+                                    <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div> <!--FIM DO SEGUNDO MENU-->
+
+
+                <div id="tab3" class="tab-pane">
+
+                    <!--INICIO DO TERCEIRO MENU-->
+                    <div class="rows-fluid">
+                        <div class="span6"> 
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Data da Aplicação:</label>
+                                <div class="controls">
+                                    <input type="text" placeholder="Text input">&nbsp;DD/MM/AAAA
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Número da Dose:</label>
+                                <div class="controls">
+                                    <select>
+                                        <option>Selecione a opção</option>
+                                        <option>1º dose</option>
+                                        <option>2º dose</option>
+                                        <option>3º dose</option>
+                                        <option>Dose de reforço</option>
+                                    </select>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class="span6">
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                                <div class="controls">
+                                    <select>
+                                        <option>Selecione a opção</option>
+                                        <option>Unidade de Saúde 1</option>
+                                        <option>Unidade de Saúde 2</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Nome da Vacina:</label>
+                                <div class="controls">
+                                    <select>
+                                        <option>Selecione a opção</option>
+                                        <option>BCG - ID</option>
+                                        <option>Hepatite B</option>
+                                        <option>Vacina Oral de Rotavírus Humano (VROH)</option>
+                                        <option>Vacina oral poliomielite (VOP)</option>
+                                    </select>
+                                </div>
+                            </div>
 
 
 
-<div class="span9">
-    <h1 id="aa">Cadastrar Cartão de Vacinas</h1>
+
+                        </div>
+                    </div>
+
+                    <div class="rows-fluid">
+                        <div class="span12">
+                            <div class="form-actions">
+                                <div class="control-group">
+                                    <button class="btn btn-primary" type="submit">Salvar</button>
+                                    <button class="btn btn-primary" type="reset">Limpar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div> <!--FIM DO TERCEIRO MENU-->
+            </div>
+        </form>
+    </div>
+</fieldset>
 
 
-    
 
 
-</div>
+
+
+
+
+
+
 
