--- a/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
@@ -1,89 +1,98 @@
-<style type="text/css">
+<script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<fieldset>
+    <legend>Cadastrar Vacinas</legend>
+    <?php
+    if ($this->mensagem):
+        ?>
+        <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
+        <?php
+    endif;
+    ?>
 
-    h1#aa{
-        background-color: #ffcc99;
-        text-align: center;
-        font-size: 20pt;
-        width: 550pt;
-        margin: 10px 0 30px 5px;
+    <div style="margin-bottom: 18px;" class="tabbable">
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#tab1">Dados Principais</a></li>
 
-    }
-    li a:hover{
-        color: #CB0101;
-
-    }
-    li a:active{
-        border-style: none;
-    }
-
-    .tabbable{
-        height: auto;
-    }
-
-    div #content{
-        width: 745px;
-        height:700px;
-        margin: 0 0 0 355px;
-        padding: 40px;
-        background: #fff;
-    }
+        </ul>
+        <form class="form-horizontal" method="post">
+            <div class="tab-content">
+                <div id="tab1" class="tab-pane active">
 
 
+                    <div id="tab1" class="tab-pane">
 
-</style>
+                        <!--INICIO DO PRIMEIRO FORM-->
+
+                        <div class="rows-fluid">
+                            <div class="span6">
+                                <div class="control-group">
+                                    <div class="control-group">
+                                        <label for="inputEmail" class="control-label">Nome da Vacina:</label>
+                                        <div class="controls">
+                                            <input type="text" placeholder="Text input">
+                                        </div>
+                                    </div>
+                                    <label for="inputEmail" class="control-label">Lote da Vacina:</label>
+                                    <div class="controls">
+                                        <input type="text" placeholder="Text input">
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <label for="inputEmail" class="control-label">Fabricante:</label>
+                                    <div class="controls">
+                                        <input type="text" placeholder="Text input">
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="span6">
+                                <div class="control-group">
+                                    <label for="inputEmail" class="control-label">Data de Fabricação:</label>
+                                    <div class="controls">
+                                        <input type="text" placeholder="Text input">
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <label for="inputEmail" class="control-label">Data de Vencimento:</label>
+                                    <div class="controls">
+                                        <input type="text" placeholder="Text input">
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <label for="inputEmail" class="control-label">Quantidade:</label>
+                                    <div class="controls">
+                                        <input type="text" placeholder="Text input">
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="rows-fluid">
+                                <div class="span12">
+                                    <div class="form-actions">
+                                        <div class="control-group">
+                                            <button class="btn btn-primary" type="submit">Salvar</button>
+                                            <button class="btn btn-primary" type="reset">Limpar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> <!--FIM DO PRIMEIRO MENU-->
+                    </div>
 
 
-
-<div class="span9">
-    <h1 id="aa">Cadastrar Vacinas</h1>
-
-
-    <form class="form-horizontal">
-        <div class="control-group">
-            <label class="control-label" for="inputEmail">Nome da Vacina:</label>
-            <div class="controls">
-                <input type="text" placeholder="Text input">
+                    </form>
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="inputEmail">Lote da Vacina:</label>
-            <div class="controls">
-                <input type="text" placeholder="Text input">
-            </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="inputEmail">Fabricante:</label>
-            <div class="controls">
-                <input type="text" placeholder="Text input">
-            </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="inputEmail">Data de Fabricação:</label>
-            <div class="controls">
-                <input type="text" placeholder="Text input">
-            </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="inputEmail">Data de Vencimento:</label>
-            <div class="controls">
-                <input type="text" placeholder="Text input">
-            </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="inputEmail">Quantidade:</label>
-            <div class="controls">
-                <input type="text" placeholder="Text input">
-            </div>
-        </div>
-        <div class="control-group">
+    </div>
+</fieldset>
 
-            <div class="controls">
-                <button class="btn btn-info" type="submit">Salvar</button>
-                <button class="btn btn-info" type="reset">Limpar</button>
 
-            </div>
-        </div>
 
-    </form>
 
-</div>
+
+
+
+
+
+
+
