formulario do cartao de vacinas

--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -21,15 +21,15 @@
                 <div id="tab1" class="tab-pane active">
 
                     <!--INICIO DO PRIMEIRO MENU-->
-                    <p class="text-left">
+                    <h5><p class="text-left muted">
                     Codigo do Paciente:<strong> 12</strong><br> 
                     Nome do Paciente: <strong>José da Silva</strong><br> 
                     Nome da mãe:<strong> Maria da Silva</strong><br> 
                     Data de Nascimento:<strong> 06/10/1989</strong><br>
-                    Sexo: <strong>Masculino</strong><br>
+                    Sexo: <strong>M</strong><br>
                     Telefone celular:<strong> (61) 9152-8547</strong><br> 
                     email:<strong> jose_silva@gmail.com</strong>
-                    </p>
+                    </p></h5>
 
                     <div class="rows-fluid">
                         <div class="span12">
