formulario do cartao de vacinas

--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -1,4 +1,10 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<ul class="pager offset10">
+    <li class="previous">
+        <a href="/admin/cartao/consulta-cartao"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+    </li>
+
+</ul>
 <fieldset>
     <legend>Registro e Aprazemento de vacinas</legend>
     <?php
@@ -22,27 +28,27 @@
 
                     <!--INICIO DO PRIMEIRO MENU-->
                     <h5><p class="text-left muted">
-                    Codigo do Paciente:<strong> 12</strong><br> 
-                    Nome do Paciente: <strong>José da Silva</strong><br> 
-                    Nome da mãe:<strong> Maria da Silva</strong><br> 
-                    Data de Nascimento:<strong> 06/10/1989</strong><br>
-                    Sexo: <strong>M</strong><br>
-                    Telefone celular:<strong> (61) 9152-8547</strong><br> 
-                    email:<strong> jose_silva@gmail.com</strong>
-                    </p></h5>
+                            Codigo do Paciente:<strong> 12</strong><br> 
+                            Nome do Paciente: <strong>José da Silva</strong><br> 
+                            Nome da mãe:<strong> Maria da Silva</strong><br> 
+                            Data de Nascimento:<strong> 06/10/1989</strong><br>
+                            Sexo: <strong>M</strong><br>
+                            Telefone celular:<strong> (61) 9152-8547</strong><br> 
+                            email:<strong> jose_silva@gmail.com</strong>
+                        </p></h5>
 
                     <div class="rows-fluid">
                         <div class="span12">
                             <div class="form-actions">
                                 <div class="control-group">
-                                    <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
+                                    <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar&nbsp; <i class="icon-forward icon-white"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
 
                 </div> <!--FIM DO PRIMEIRO MENU-->
-                
+
                 <div id="tab2" class="tab-pane">
 
                     <!--INICIO DO SEGUNDO MENU-->
