Caso de uso recuperação de senha com captcha concluido.

--- a/application/modules/site/views/scripts/auth/login.phtml
+++ b/application/modules/site/views/scripts/auth/login.phtml
@@ -73,7 +73,8 @@
             </div>
         </div>
         <button class="btn btn-small btn-primary" type="submit">Acessar</button>
-        <a class="" href="/auth/recover">Esqueci minha senha</a>
+        <a class="" href="#">Esqueci minha senha</a>
+        <a class="" href="#">Pré-Cadastrar</a>
     </form>
     <br>
     <br>
