Correção janela login.

--- a/application/modules/admin/views/scripts/auth/login.phtml
+++ b/application/modules/admin/views/scripts/auth/login.phtml
@@ -73,7 +73,7 @@
             </div>
         </div>
         <button class="btn btn-small btn-primary" type="submit">Acessar</button>
-        <a class="" href="/auth/recover">Esqueci minha senha</a>
+        <a class="" href="/auth/recuperar">Esqueci minha senha</a>
     </form>
     <br>
     <br>
