alteraçoes no layaout do mod admin

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -230,14 +230,14 @@
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/pessoa/consulta-funcionario" title="Consultar Funcionário" class="corner-all">
-                                            <i class="icofont-file"></i>
+                                            <i class="icon-book"></i>&nbsp;
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/pessoa/cadastro-funcionario" title="Cadastrar Funcionário" class="corner-all">
-                                            <i class="icofont-book"></i>
+                                            <i class="icon-pencil"></i>&nbsp;
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
                                     </li>
@@ -257,14 +257,14 @@
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/pessoa/consulta-paciente" title="Consultar Paciente" class="corner-all">
-                                            <i class="icofont-file"></i>
+                                            <i class="icon-book"></i>&nbsp;
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/pessoa/cadastro-paciente" title="Cadastrar Paciente" class="corner-all">
-                                            <i class="icofont-book"></i>
+                                            <i class="icon-pencil"></i>&nbsp;
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
                                     </li>
@@ -284,14 +284,14 @@
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/unidade/consulta-unidade" title=" Consultar Unidades de Saúde" class="corner-all">
-                                            <i class="icofont-file"></i>
+                                            <i class="icon-book"></i>&nbsp;
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/unidade/cadastro-unidade" title="Cadastrar Unidade de Saúde" class="corner-all">
-                                            <i class="icofont-book"></i>
+                                            <i class="icon-pencil"></i>&nbsp;
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
                                     </li>
@@ -310,14 +310,14 @@
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/vacina/consulta-vacina" title="Consultar Vacinas" class="corner-all">
-                                            <i class="icofont-file"></i>
+                                            <i class="icon-book"></i>&nbsp;
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/vacina/cadastro-vacina" title="Cadastrar Vacinas" class="corner-all">
-                                            <i class="icofont-book"></i>
+                                            <i class="icon-pencil"></i>&nbsp;
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
                                     </li>
@@ -336,7 +336,7 @@
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/cartao/consulta-cartao" title="Consultar Cartão de Vacinas" class="corner-all">
-                                            <i class="icofont-file"></i>
+                                            <i class="icon-book"></i>&nbsp;
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
@@ -356,14 +356,14 @@
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/campanha/consulta-campanha" title="Consultar Campanhas" class="corner-all">
-                                            <i class="icofont-file"></i>
+                                            <i class="icon-book"></i>&nbsp;
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="/admin/campanha/cadastro-campanha" title="Cadastrar Campanhas" class="corner-all">
-                                            <i class="icofont-book"></i>
+                                            <i class="icon-pencil"></i>&nbsp;
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
                                     </li>
@@ -382,14 +382,14 @@
                                     <li class="divider"></li>
                                     <li>
                                         <a href="form.html" title="form element" class="corner-all">
-                                            <i class="icofont-file"></i>
+                                           <i class="icon-envelope"></i>&nbsp;
                                             <span class="sidebar-text">Enviar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="code_editor.html" title="code editor" class="corner-all">
-                                            <i class="icofont-book"></i>
+                                            <i class="icon-file"></i>&nbsp;
                                             <span class="sidebar-text">Histórico de Mensagens</span>
                                         </a>
                                     </li>
@@ -419,64 +419,29 @@
                                 <li>
                                     <a href="#">
                                         <span data-chart="peity-bar" data-height="32" data-colours='["#00A600", "#00A600"]'>5,3,9,6,5,9,7,3,5,2</span>
-                                        <div class="action-text color-green">8765 <span class="helper-font-small color-silver-dark">Visits</span></div>
+                                        <div class="action-text color-green">8765 <span class="helper-font-small color-silver-dark">Visitas</span></div>
                                     </a>
                                 </li>
                                 <li class="divider"></li>
                                 <li>
                                     <a href="#">
                                         <span data-chart="peity-bar" data-height="32" data-colours='["#00A0B1", "#00A0B1"]'>9,7,9,6,3,5,3,5,5,2</span>
-                                        <div class="action-text color-teal">1437 <span class="helper-font-small color-silver-dark">Users</span></div>
+                                        <div class="action-text color-teal">1437 <span class="helper-font-small color-silver-dark">Usuários</span></div>
                                     </a>
                                 </li>
                                 <li class="divider"></li>
                                 <li>
                                     <a href="#">
                                         <span data-chart="peity-bar" data-height="32" data-colours='["#BF1E4B", "#BF1E4B"]'>6,5,9,7,3,5,2,5,3,9</span>
-                                        <div class="action-text color-red">4367 <span class="helper-font-small color-silver-dark">Orders</span></div>
+                                        <div class="action-text color-red">4367 <span class="helper-font-small color-silver-dark">Fale Conosco</span></div>
                                     </a>
                                 </li>
                             </ul>
-                            <h2><i class="icofont-home"></i>Painel Administrativo</h2>
+                            <h2><i class="icon-cog"></i>&nbsp;</i>Painel Administrativo</h2>
                         </div><!-- /content-header -->
                         
-                        <!-- content-breadcrumb -->
-                        <div class="content-breadcrumb">
-                            <!--breadcrumb-nav-->
-                            <ul class="breadcrumb-nav pull-right">
-                                <li class="divider"></li>
-                                <li class="btn-group">
-                                    <a href="#" class="btn btn-small btn-link dropdown-toggle" data-toggle="dropdown">
-                                        <i class="icofont-tasks"></i> Tasks
-                                        <i class="icofont-caret-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">Some Action</a></li>
-                                        <li><a href="#">Other Action</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Something Else</a></li>
-                                    </ul>
-                                </li>
-                                <li class="divider"></li>
-                                <li class="btn-group">
-                                    <a href="#" class="btn btn-small btn-link">
-                                        <i class="icofont-money"></i> Orders <span class="color-red">(+12)</span>
-                                    </a>
-                                </li>
-                                <li class="divider"></li>
-                                <li class="btn-group">
-                                    <a href="#" class="btn btn-small btn-link">
-                                        <i class="icofont-user"></i> Users <span class="color-red">(+34)</span>
-                                    </a>
-                                </li>
-                            </ul><!--/breadcrumb-nav-->
-                            
-                            <!--breadcrumb-->
-                            <ul class="breadcrumb">
-                                <li><a href="index-2.html"><i class="icofont-home"></i> Dashboard</a> <span class="divider">&rsaquo;</span></li>
-                                <li class="active">Data elements</li>
-                            </ul><!--/breadcrumb-->
-                        </div><!-- /content-breadcrumb -->
+                       
+                         
                         <section class="content-body">
                             <?php echo $this->layout()->content ?>
                         </section>
@@ -827,9 +792,9 @@
                             <!--sidebar-right-control-->
                             <div class="sidebar-right-control">
                                 <ul class="sr-control-item">
-                                    <li class="active"><a href="#contact" data-toggle="tab" title="Fale Conosco"><i class="icofont-group"></i></a></li>
-                                    <li><a href="#alt1" data-toggle="tab" title="Estoque de vacinas"><i class="icofont-flag"></i></a></li>
-                                    <li rel="tooltip-bottom" title="ver site"><a href="index-2.html" target="_BLANK"><i class="icofont-external-link"></i></a></li>
+                                    <li class="active"><a href="#contact" data-toggle="tab" title="Fale Conosco"><i class="icon-user"></i></i></a></li>
+                                    <li><a href="#alt1" data-toggle="tab" title="Estoque de vacinas"><i class="icon-briefcase"></i></a></li>
+                                    <li rel="tooltip-bottom" title="ver site"><a href="simova.local" target="_BLANK"><i class="icon-globe"></i></i></a></li>
                                 </ul>
                             </div><!-- /sidebar-right-control-->
                             <!-- sidebar-right-content -->
