--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -792,9 +792,9 @@
                             <!--sidebar-right-control-->
                             <div class="sidebar-right-control">
                                 <ul class="sr-control-item">
-                                    <li class="active"><a href="#contact" data-toggle="tab" title="Fale Conosco"><i class="icon-user"></i></i></a></li>
+                                    <li class="active"><a href="#contact" data-toggle="tab" title="Fale Conosco"><i class="icon-user"></i></a></li>
                                     <li><a href="#alt1" data-toggle="tab" title="Estoque de vacinas"><i class="icon-briefcase"></i></a></li>
-                                    <li rel="tooltip-bottom" title="ver site"><a href="simova.local" target="_BLANK"><i class="icon-globe"></i></i></a></li>
+                                    <li rel="tooltip-bottom" title="ver site"><a href="simova.local" target="_BLANK"><i class="icon-globe"></i></a></li>
                                 </ul>
                             </div><!-- /sidebar-right-control-->
                             <!-- sidebar-right-content -->
